// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: FileInputField should render a disabled file input field 1`] = `
.c0 + .c0 {
  margin-top: 16px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c6 {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c13 {
  font-size: 40px;
  vertical-align: middle;
}

.c16 {
  font-size: 16px;
  vertical-align: middle;
}

.c8 {
  vertical-align: middle;
}

.c9 {
  outline: none;
  color: hsl(0,0%,70%);
}

.c9:hover {
  color: hsl(0,0%,70%);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 .c5 {
  display: block;
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 8px;
  color: hsl(0,0%,70%);
}

.c1 .c7 {
  position: relative;
  font-size: 16px;
  padding-right: 8px;
}

.c1 .sc-gVFdEO {
  margin-top: 4px;
}

.c15 {
  font-size: 18px;
  line-height: 1.5;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(0,0%,70%);
  cursor: not-allowed;
}

.c15:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 1px solid hsl(200,96%,35%);
  border-radius: 8px;
}

.c15::-moz-focus-inner {
  border: 0;
}

.c15 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

.c11 {
  width: 300px;
  height: 100px;
}

.c11 .c12 {
  position: absolute;
  top: 30%;
  left: 15%;
  color: hsl(0,0%,70%);
}

.c11 span {
  position: absolute;
  top: 20%;
  left: 37%;
  color: hsl(0,0%,70%);
}

.c10 {
  box-sizing: border-box;
  border-radius: 4px;
  border: none;
  border-color: hsl(200,10%,20%);
  min-width: 300px;
  min-height: 100px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(0,0%,90%);
}

.c10.empty .c14 {
  position: absolute;
  left: 35%;
  bottom: 15%;
}

.c10.notEmpty {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-color: hsl(200,96%,35%);
  padding: 0 8px;
}

.c10.notEmpty .c14 {
  position: relative;
  margin: 16px 0 16px 0;
}

.c10 input {
  display: none;
}

.c2 {
  position: relative;
}

.c2 .c5 {
  display: block;
  position: relative;
  bottom: 4px;
  padding-left: 16px;
  color: hsl(0,0%,70%);
}

.c2 .c7 {
  display: block;
  bottom: 4px;
  font-size: 16px;
  color: hsl(0,0%,70%);
}

@media screen and (min-width:1024px) {
  .c6 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c15 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c3 c4"
      display="flex"
    >
      <label
        class="c5 c6"
        for="consistent"
        id="consistent-label"
      >
        Just Boolin
      </label>
      <span
        class="c7 "
        data-reach-tooltip-trigger=""
      >
        <svg
          class="c8 c9"
          disabled=""
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M22,12 C22,6.47714622 17.5223159,2 12,2 C6.47523326,2 2,6.47577095 2,12 C2,17.524229 6.47523326,22 12,22 C17.5223159,22 22,17.5228538 22,12 Z M24,12 C24,18.6274771 18.6268316,24 12,24 C5.37060996,24 0,18.6287448 0,12 C0,5.37125524 5.37060996,0 12,0 C18.6268316,0 24,5.37252293 24,12 Z M11.057,15.6442233 L11.057,12.5 L9.27493729,12.5 C8.72265254,12.5 8.27493729,12.0522847 8.27493729,11.5 C8.27493729,10.9477153 8.72265254,10.5 9.27493729,10.5 L12.057,10.5 C12.6092847,10.5 13.057,10.9477153 13.057,11.5 L13.057,15.6442233 L15.0505322,15.6442233 C15.602817,15.6442233 16.0505322,16.0919386 16.0505322,16.6442233 C16.0505322,17.1965081 15.602817,17.6442233 15.0505322,17.6442233 L9,17.6442233 C8.44771525,17.6442233 8,17.1965081 8,16.6442233 C8,16.0919386 8.44771525,15.6442233 9,15.6442233 L11.057,15.6442233 Z M11.5,9 C10.6715729,9 10,8.32842712 10,7.5 C10,6.67157288 10.6715729,6 11.5,6 C12.3284271,6 13,6.67157288 13,7.5 C13,8.32842712 12.3284271,9 11.5,9 Z"
          />
        </svg>
      </span>
    </div>
    <div
      aria-labelledby="consistent-label"
      class="c10 empty"
    >
      <input
        accept=".txt"
        disabled=""
        name="bears"
        type="file"
      />
      <div
        class="c11"
      >
        <svg
          class="c12 c13"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M13,4.41421356 L13,17.108 C13,17.6602847 12.5522847,18.108 12,18.108 C11.4477153,18.108 11,17.6602847 11,17.108 L11,4.41421356 L7.70710678,7.70710678 C7.31658249,8.09763107 6.68341751,8.09763107 6.29289322,7.70710678 C5.90236893,7.31658249 5.90236893,6.68341751 6.29289322,6.29289322 L11.2928932,1.29289322 C11.6834175,0.902368927 12.3165825,0.902368927 12.7071068,1.29289322 L17.7071068,6.29289322 C18.0976311,6.68341751 18.0976311,7.31658249 17.7071068,7.70710678 C17.3165825,8.09763107 16.6834175,8.09763107 16.2928932,7.70710678 L13,4.41421356 Z M21,17 C21,16.4477153 21.4477153,16 22,16 C22.5522847,16 23,16.4477153 23,17 L23,19.0002091 C23,21.1800298 21.4176187,23 19.3918182,23 L4.60818182,23 C2.58172509,23 1,21.1803466 1,19.0002091 L1,17 C1,16.4477153 1.44771525,16 2,16 C2.55228475,16 3,16.4477153 3,17 L3,19.0002091 C3,20.1332156 3.75344824,21 4.60818182,21 L19.3918182,21 C20.2460177,21 21,20.13281 21,19.0002091 L21,17 Z"
          />
        </svg>
        <span>
          Drag files here or
        </span>
      </div>
      <button
        aria-describedby="consistent-tip"
        class="c14 c15"
        disabled=""
        id="consistent"
        type="button"
      >
        <svg
          class="c16"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3,9 L3,2 C3,1.44771525 3.44771525,1 4,1 L8.86956522,1 C9.13300396,1 9.38580138,1.10395302 9.57303415,1.28927399 L10.6720803,2.37709802 L20,2.37709802 C20.5522847,2.37709802 21,2.82481327 21,3.37709802 L21,9 L22,9 C22.6077887,9 23.0750324,9.5377097 22.9902149,10.1395511 L21.2857687,22.2338171 C21.2162209,22.7273084 20.7939217,23.094266 20.2955538,23.094266 L3.92354726,23.094266 C3.43189906,23.094266 3.01318427,22.7368835 2.9359601,22.251338 L1.01241285,10.157072 C0.915823617,9.5497691 1.38506399,9 2,9 L3,9 Z M4,11 L3.17161508,11 L4.7770699,21.094266 L19.4266021,21.094266 L20.8491881,11 L20,11 L4,11 Z M19,9 L19,4.37709802 L10.2608696,4.37709802 C9.99743082,4.37709802 9.7446334,4.27314501 9.55740063,4.08782403 L8.45835446,3 L5,3 L5,9 L19,9 Z"
          />
        </svg>
        Select Files...
      </button>
    </div>
  </div>
</div>
`;

exports[`component: FileInputField should render a file with an error 1`] = `
.c0 + .c0 {
  margin-top: 16px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c6 {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c26 {
  font-size: 16px;
  vertical-align: middle;
}

.c20 {
  vertical-align: middle;
}

.c16 {
  font-size: 24px;
  vertical-align: middle;
}

.c23 {
  vertical-align: middle;
}

.c8 {
  vertical-align: middle;
}

.c22 {
  padding: 2px 4px;
  position: relative;
  box-sizing: border-box;
  overflow-wrap: break-word;
  display: inline-block;
  font-size: 15px;
  line-height: 1.6;
  background-color: hsla(353,84%,44%,0.3);
}

.c22 .c15,
.c22 .sc-daBvwG,
.c22 .sc-dWBSoC {
  margin-right: 4px;
  vertical-align: -2px;
}

.c9 {
  outline: none;
  color: hsl(200,10%,20%);
}

.c9:hover {
  color: hsl(200,96%,35%);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 .c5 {
  display: block;
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 8px;
}

.c1 .c7 {
  position: relative;
  font-size: 16px;
  padding-right: 8px;
}

.c1 .c21 {
  margin-top: 4px;
}

.c14 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(200,10%,20%);
  background-color: hsla(353,84%,44%,0.3);
}

.c14 .c15 {
  padding-bottom: 4px;
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  color: hsl(200,96%,11%);
  font-size: 24px;
}

.c18::-moz-focus-inner {
  border: 0;
}

.c18:focus {
  background-color: hsla(200,96%,35%,0.3);
}

.c18:hover {
  color: hsl(200,96%,35%);
}

.c25 {
  font-size: 18px;
  line-height: 1.5;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,35%);
}

.c25:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c25:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 1px solid hsl(200,96%,35%);
  border-radius: 8px;
}

.c25::-moz-focus-inner {
  border: 0;
}

.c25 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

.c12 {
  box-sizing: border-box;
  width: 100%;
  min-height: 36px;
  margin-top: 8px;
  padding: 0 8px 0 8px;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(200,10%,20%);
  border: 1px solid hsl(353,84%,44%);
  background-color: hsla(353,84%,44%,0.3);
}

.c12 span {
  margin-left: 8px;
  margin-right: 8px;
  font-size: 18px;
  line-height: 1.5;
}

.c12 .c13 {
  height: 24px;
  width: 24px;
}

.c12 .c13 .c15 {
  height: 16px;
  width: 16px;
}

.c12 .c13 .sc-dWBSoC {
  height: 18px;
  width: 18px;
}

.c12 .sc-iGkqGz {
  height: 12px;
  width: 12px;
}

.c12 .c17 {
  margin-left: auto;
}

.c12 .c19 {
  height: 12px;
  width: 12px;
}

.c11 {
  width: 100%;
}

.c11 .c21 {
  position: relative;
  margin-top: 4px;
}

.c10 {
  box-sizing: border-box;
  border-radius: 4px;
  border: 2px dotted;
  border-color: hsl(200,10%,20%);
  min-width: 300px;
  min-height: 100px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10.empty .c24 {
  position: absolute;
  left: 35%;
  bottom: 15%;
}

.c10.notEmpty {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-color: hsl(200,96%,35%);
  padding: 0 8px;
}

.c10.notEmpty .c24 {
  position: relative;
  margin: 16px 0 16px 0;
}

.c10 input {
  display: none;
}

.c2 {
  position: relative;
}

.c2 .c5 {
  display: block;
  position: relative;
  bottom: 4px;
  padding-left: 16px;
}

.c2 .c7 {
  display: block;
  bottom: 4px;
  font-size: 16px;
}

@media screen and (min-width:1024px) {
  .c6 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c22 {
    font-size: 15px;
    line-height: 1.6;
  }
}

@media screen and (min-width:1024px) {
  .c25 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c12 span {
    font-size: 18px;
    line-height: 1.5;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c3 c4"
      display="flex"
    >
      <label
        class="c5 c6"
        for="consistent"
        id="consistent-label"
      >
        Just Boolin
      </label>
      <span
        class="c7 "
        data-reach-tooltip-trigger=""
      >
        <svg
          class="c8 c9"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M22,12 C22,6.47714622 17.5223159,2 12,2 C6.47523326,2 2,6.47577095 2,12 C2,17.524229 6.47523326,22 12,22 C17.5223159,22 22,17.5228538 22,12 Z M24,12 C24,18.6274771 18.6268316,24 12,24 C5.37060996,24 0,18.6287448 0,12 C0,5.37125524 5.37060996,0 12,0 C18.6268316,0 24,5.37252293 24,12 Z M11.057,15.6442233 L11.057,12.5 L9.27493729,12.5 C8.72265254,12.5 8.27493729,12.0522847 8.27493729,11.5 C8.27493729,10.9477153 8.72265254,10.5 9.27493729,10.5 L12.057,10.5 C12.6092847,10.5 13.057,10.9477153 13.057,11.5 L13.057,15.6442233 L15.0505322,15.6442233 C15.602817,15.6442233 16.0505322,16.0919386 16.0505322,16.6442233 C16.0505322,17.1965081 15.602817,17.6442233 15.0505322,17.6442233 L9,17.6442233 C8.44771525,17.6442233 8,17.1965081 8,16.6442233 C8,16.0919386 8.44771525,15.6442233 9,15.6442233 L11.057,15.6442233 Z M11.5,9 C10.6715729,9 10,8.32842712 10,7.5 C10,6.67157288 10.6715729,6 11.5,6 C12.3284271,6 13,6.67157288 13,7.5 C13,8.32842712 12.3284271,9 11.5,9 Z"
          />
        </svg>
      </span>
      <span
        id="consistent-tip"
        role="tooltip"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      >
        upload something
      </span>
    </div>
    <div
      aria-labelledby="consistent-label"
      class="c10 notEmpty"
    >
      <input
        accept=".txt"
        name="bears"
        type="file"
      />
      <div
        class="c11"
      >
        <div
          aria-disabled="false"
          aria-label="boolest.txt, Get it together, man"
          class="c12"
          tabindex="0"
        >
          <div
            class="c13 c14"
          >
            <svg
              class="c15 c16"
              fill="currentcolor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M11.1055728,1.5527864 C11.4740971,0.815737865 12.5259029,0.815737865 12.8944272,1.5527864 L22.8944272,21.5527864 C23.2268777,22.2176875 22.743382,23 22,23 L2,23 C1.25661798,23 0.773122263,22.2176875 1.10557281,21.5527864 L11.1055728,1.5527864 Z M3.61803399,21 L20.381966,21 L12,4.23606798 L3.61803399,21 Z M12,18 C11.4477153,18 11,17.5522847 11,17 C11,16.4477153 11.4477153,16 12,16 C12.5522847,16 13,16.4477153 13,17 C13,17.5522847 12.5522847,18 12,18 Z M13,14 C13,14.5522847 12.5522847,15 12,15 C11.4477153,15 11,14.5522847 11,14 L11,11 C11,10.4477153 11.4477153,10 12,10 C12.5522847,10 13,10.4477153 13,11 L13,14 Z"
              />
            </svg>
          </div>
          <span>
            boolest.txt
          </span>
          <button
            aria-label="Delete File"
            class="c17 c18"
            data-filename="boolest.txt"
            type="button"
            variant="standard"
          >
            <svg
              class="c19 c20"
              fill="currentcolor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13.4142136,12 L22.7071068,21.2928932 C23.0976311,21.6834175 23.0976311,22.3165825 22.7071068,22.7071068 C22.3165825,23.0976311 21.6834175,23.0976311 21.2928932,22.7071068 L12,13.4142136 L2.70710678,22.7071068 C2.31658249,23.0976311 1.68341751,23.0976311 1.29289322,22.7071068 C0.902368927,22.3165825 0.902368927,21.6834175 1.29289322,21.2928932 L10.5857864,12 L1.29289322,2.70710678 C0.902368927,2.31658249 0.902368927,1.68341751 1.29289322,1.29289322 C1.68341751,0.902368927 2.31658249,0.902368927 2.70710678,1.29289322 L12,10.5857864 L21.2928932,1.29289322 C21.6834175,0.902368927 22.3165825,0.902368927 22.7071068,1.29289322 C23.0976311,1.68341751 23.0976311,2.31658249 22.7071068,2.70710678 L13.4142136,12 Z"
              />
            </svg>
          </button>
        </div>
        <div
          class="c21 c22"
          role="alert"
        >
          <svg
            aria-hidden="true"
            class="c15 c23"
            fill="currentcolor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M11.1055728,1.5527864 C11.4740971,0.815737865 12.5259029,0.815737865 12.8944272,1.5527864 L22.8944272,21.5527864 C23.2268777,22.2176875 22.743382,23 22,23 L2,23 C1.25661798,23 0.773122263,22.2176875 1.10557281,21.5527864 L11.1055728,1.5527864 Z M3.61803399,21 L20.381966,21 L12,4.23606798 L3.61803399,21 Z M12,18 C11.4477153,18 11,17.5522847 11,17 C11,16.4477153 11.4477153,16 12,16 C12.5522847,16 13,16.4477153 13,17 C13,17.5522847 12.5522847,18 12,18 Z M13,14 C13,14.5522847 12.5522847,15 12,15 C11.4477153,15 11,14.5522847 11,14 L11,11 C11,10.4477153 11.4477153,10 12,10 C12.5522847,10 13,10.4477153 13,11 L13,14 Z"
            />
          </svg>
          <span>
            Get it together, man
          </span>
        </div>
      </div>
      <button
        aria-describedby="consistent-tip"
        class="c24 c25"
        id="consistent"
        type="button"
      >
        <svg
          class="c26"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3,9 L3,2 C3,1.44771525 3.44771525,1 4,1 L8.86956522,1 C9.13300396,1 9.38580138,1.10395302 9.57303415,1.28927399 L10.6720803,2.37709802 L20,2.37709802 C20.5522847,2.37709802 21,2.82481327 21,3.37709802 L21,9 L22,9 C22.6077887,9 23.0750324,9.5377097 22.9902149,10.1395511 L21.2857687,22.2338171 C21.2162209,22.7273084 20.7939217,23.094266 20.2955538,23.094266 L3.92354726,23.094266 C3.43189906,23.094266 3.01318427,22.7368835 2.9359601,22.251338 L1.01241285,10.157072 C0.915823617,9.5497691 1.38506399,9 2,9 L3,9 Z M4,11 L3.17161508,11 L4.7770699,21.094266 L19.4266021,21.094266 L20.8491881,11 L20,11 L4,11 Z M19,9 L19,4.37709802 L10.2608696,4.37709802 C9.99743082,4.37709802 9.7446334,4.27314501 9.55740063,4.08782403 L8.45835446,3 L5,3 L5,9 L19,9 Z"
          />
        </svg>
        Select Files...
      </button>
    </div>
  </div>
</div>
`;

exports[`component: FileInputField should render a loaded file 1`] = `
.c0 + .c0 {
  margin-top: 16px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c6 {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c23 {
  font-size: 16px;
  vertical-align: middle;
}

.c20 {
  vertical-align: middle;
}

.c8 {
  vertical-align: middle;
}

.c16 {
  font-size: 24px;
  vertical-align: middle;
}

.c9 {
  outline: none;
  color: hsl(200,10%,20%);
}

.c9:hover {
  color: hsl(200,96%,35%);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 .c5 {
  display: block;
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 8px;
}

.c1 .c7 {
  position: relative;
  font-size: 16px;
  padding-right: 8px;
}

.c1 .sc-gVFdEO {
  margin-top: 4px;
}

.c14 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(200,10%,20%);
  background-color: hsla(145,89%,28%,0.3);
}

.c14 .sc-jUfxsr {
  padding-bottom: 4px;
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  color: hsl(200,96%,11%);
  font-size: 24px;
}

.c18::-moz-focus-inner {
  border: 0;
}

.c18:focus {
  background-color: hsla(200,96%,35%,0.3);
}

.c18:hover {
  color: hsl(200,96%,35%);
}

.c22 {
  font-size: 18px;
  line-height: 1.5;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,35%);
}

.c22:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c22:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 1px solid hsl(200,96%,35%);
  border-radius: 8px;
}

.c22::-moz-focus-inner {
  border: 0;
}

.c22 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

.c12 {
  box-sizing: border-box;
  width: 100%;
  min-height: 36px;
  margin-top: 8px;
  padding: 0 8px 0 8px;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(200,10%,20%);
  border: 1px solid hsl(145,89%,28%);
  background-color: hsla(145,89%,28%,0.3);
}

.c12 span {
  margin-left: 8px;
  margin-right: 8px;
  font-size: 18px;
  line-height: 1.5;
}

.c12 .c13 {
  height: 24px;
  width: 24px;
}

.c12 .c13 .sc-jUfxsr {
  height: 16px;
  width: 16px;
}

.c12 .c13 .c15 {
  height: 18px;
  width: 18px;
}

.c12 .sc-iGkqGz {
  height: 12px;
  width: 12px;
}

.c12 .c17 {
  margin-left: auto;
}

.c12 .c19 {
  height: 12px;
  width: 12px;
}

.c11 {
  width: 100%;
}

.c11 .sc-gVFdEO {
  position: relative;
  margin-top: 4px;
}

.c10 {
  box-sizing: border-box;
  border-radius: 4px;
  border: 2px dotted;
  border-color: hsl(200,10%,20%);
  min-width: 300px;
  min-height: 100px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10.empty .c21 {
  position: absolute;
  left: 35%;
  bottom: 15%;
}

.c10.notEmpty {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-color: hsl(200,96%,35%);
  padding: 0 8px;
}

.c10.notEmpty .c21 {
  position: relative;
  margin: 16px 0 16px 0;
}

.c10 input {
  display: none;
}

.c2 {
  position: relative;
}

.c2 .c5 {
  display: block;
  position: relative;
  bottom: 4px;
  padding-left: 16px;
}

.c2 .c7 {
  display: block;
  bottom: 4px;
  font-size: 16px;
}

@media screen and (min-width:1024px) {
  .c6 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c22 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c12 span {
    font-size: 18px;
    line-height: 1.5;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c3 c4"
      display="flex"
    >
      <label
        class="c5 c6"
        for="consistent"
        id="consistent-label"
      >
        Just Boolin
      </label>
      <span
        class="c7 "
        data-reach-tooltip-trigger=""
      >
        <svg
          class="c8 c9"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M22,12 C22,6.47714622 17.5223159,2 12,2 C6.47523326,2 2,6.47577095 2,12 C2,17.524229 6.47523326,22 12,22 C17.5223159,22 22,17.5228538 22,12 Z M24,12 C24,18.6274771 18.6268316,24 12,24 C5.37060996,24 0,18.6287448 0,12 C0,5.37125524 5.37060996,0 12,0 C18.6268316,0 24,5.37252293 24,12 Z M11.057,15.6442233 L11.057,12.5 L9.27493729,12.5 C8.72265254,12.5 8.27493729,12.0522847 8.27493729,11.5 C8.27493729,10.9477153 8.72265254,10.5 9.27493729,10.5 L12.057,10.5 C12.6092847,10.5 13.057,10.9477153 13.057,11.5 L13.057,15.6442233 L15.0505322,15.6442233 C15.602817,15.6442233 16.0505322,16.0919386 16.0505322,16.6442233 C16.0505322,17.1965081 15.602817,17.6442233 15.0505322,17.6442233 L9,17.6442233 C8.44771525,17.6442233 8,17.1965081 8,16.6442233 C8,16.0919386 8.44771525,15.6442233 9,15.6442233 L11.057,15.6442233 Z M11.5,9 C10.6715729,9 10,8.32842712 10,7.5 C10,6.67157288 10.6715729,6 11.5,6 C12.3284271,6 13,6.67157288 13,7.5 C13,8.32842712 12.3284271,9 11.5,9 Z"
          />
        </svg>
      </span>
      <span
        id="consistent-tip"
        role="tooltip"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      >
        upload something
      </span>
    </div>
    <div
      aria-labelledby="consistent-label"
      class="c10 notEmpty"
    >
      <input
        accept=".txt"
        name="bears"
        type="file"
      />
      <div
        class="c11"
      >
        <div
          aria-disabled="false"
          aria-label="boolest.txt, Successful"
          class="c12"
          tabindex="0"
        >
          <div
            class="c13 c14"
          >
            <svg
              class="c15 c16"
              fill="currentcolor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M9.81384674,19.7396292 C9.5249491,19.7396292 9.24415138,19.6325301 9.02725315,19.4381317 L3.38789908,14.3504731 C2.906403,13.9166766 2.86770331,13.1741827 3.30239977,12.6926866 C3.73619624,12.2120905 4.47869019,12.1724908 4.96018627,12.6071873 L9.67974783,16.8641526 L18.9127726,5.4369457 C19.3204693,4.93204981 20.0593633,4.85285046 20.5642592,5.26144713 C21.0682551,5.66914381 21.1465544,6.40803779 20.7388578,6.91293368 L10.7273393,19.3040328 C10.524841,19.5542307 10.2269434,19.7108295 9.90654599,19.7369292 C9.87504624,19.7387292 9.84444649,19.7396292 9.81384674,19.7396292"
              />
            </svg>
          </div>
          <span>
            boolest.txt
          </span>
          <button
            aria-label="Delete File"
            class="c17 c18"
            data-filename="boolest.txt"
            type="button"
            variant="standard"
          >
            <svg
              class="c19 c20"
              fill="currentcolor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13.4142136,12 L22.7071068,21.2928932 C23.0976311,21.6834175 23.0976311,22.3165825 22.7071068,22.7071068 C22.3165825,23.0976311 21.6834175,23.0976311 21.2928932,22.7071068 L12,13.4142136 L2.70710678,22.7071068 C2.31658249,23.0976311 1.68341751,23.0976311 1.29289322,22.7071068 C0.902368927,22.3165825 0.902368927,21.6834175 1.29289322,21.2928932 L10.5857864,12 L1.29289322,2.70710678 C0.902368927,2.31658249 0.902368927,1.68341751 1.29289322,1.29289322 C1.68341751,0.902368927 2.31658249,0.902368927 2.70710678,1.29289322 L12,10.5857864 L21.2928932,1.29289322 C21.6834175,0.902368927 22.3165825,0.902368927 22.7071068,1.29289322 C23.0976311,1.68341751 23.0976311,2.31658249 22.7071068,2.70710678 L13.4142136,12 Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <button
        aria-describedby="consistent-tip"
        class="c21 c22"
        id="consistent"
        type="button"
      >
        <svg
          class="c23"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3,9 L3,2 C3,1.44771525 3.44771525,1 4,1 L8.86956522,1 C9.13300396,1 9.38580138,1.10395302 9.57303415,1.28927399 L10.6720803,2.37709802 L20,2.37709802 C20.5522847,2.37709802 21,2.82481327 21,3.37709802 L21,9 L22,9 C22.6077887,9 23.0750324,9.5377097 22.9902149,10.1395511 L21.2857687,22.2338171 C21.2162209,22.7273084 20.7939217,23.094266 20.2955538,23.094266 L3.92354726,23.094266 C3.43189906,23.094266 3.01318427,22.7368835 2.9359601,22.251338 L1.01241285,10.157072 C0.915823617,9.5497691 1.38506399,9 2,9 L3,9 Z M4,11 L3.17161508,11 L4.7770699,21.094266 L19.4266021,21.094266 L20.8491881,11 L20,11 L4,11 Z M19,9 L19,4.37709802 L10.2608696,4.37709802 C9.99743082,4.37709802 9.7446334,4.27314501 9.55740063,4.08782403 L8.45835446,3 L5,3 L5,9 L19,9 Z"
          />
        </svg>
        Select Files...
      </button>
    </div>
  </div>
</div>
`;

exports[`component: FileInputField should render a loading file 1`] = `
.c0 + .c0 {
  margin-top: 16px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c6 {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c18 {
  font-size: 16px;
  vertical-align: middle;
}

.c8 {
  vertical-align: middle;
}

.c14 {
  vertical-align: middle;
  font-size: 40px;
}

.c9 {
  outline: none;
  color: hsl(200,10%,20%);
}

.c9:hover {
  color: hsl(200,96%,35%);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 .c5 {
  display: block;
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 8px;
}

.c1 .c7 {
  position: relative;
  font-size: 16px;
  padding-right: 8px;
}

.c1 .sc-gVFdEO {
  margin-top: 4px;
}

.c15 {
  -webkit-animation: bKPVWD 0.75s linear infinite;
  animation: bKPVWD 0.75s linear infinite;
}

.c17 {
  font-size: 18px;
  line-height: 1.5;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,35%);
}

.c17:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c17:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 1px solid hsl(200,96%,35%);
  border-radius: 8px;
}

.c17::-moz-focus-inner {
  border: 0;
}

.c17 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

.c12 {
  box-sizing: border-box;
  width: 100%;
  min-height: 36px;
  margin-top: 8px;
  padding: 0 8px 0 8px;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsl(200,10%,20%);
  background-color: hsl(200,29%,90%);
}

.c12 span {
  margin-left: 8px;
  margin-right: 8px;
  font-size: 18px;
  line-height: 1.5;
}

.c12 .sc-flUlJl {
  height: 24px;
  width: 24px;
}

.c12 .sc-flUlJl .sc-jUfxsr {
  height: 16px;
  width: 16px;
}

.c12 .sc-flUlJl .sc-dWBSoC {
  height: 18px;
  width: 18px;
}

.c12 .c13 {
  height: 12px;
  width: 12px;
}

.c12 .sc-eXuzZk {
  margin-left: auto;
}

.c12 .sc-amjdv {
  height: 12px;
  width: 12px;
}

.c11 {
  width: 100%;
}

.c11 .sc-gVFdEO {
  position: relative;
  margin-top: 4px;
}

.c10 {
  box-sizing: border-box;
  border-radius: 4px;
  border: 2px dotted;
  border-color: hsl(200,10%,20%);
  min-width: 300px;
  min-height: 100px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10.empty .c16 {
  position: absolute;
  left: 35%;
  bottom: 15%;
}

.c10.notEmpty {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-color: hsl(200,96%,35%);
  padding: 0 8px;
}

.c10.notEmpty .c16 {
  position: relative;
  margin: 16px 0 16px 0;
}

.c10 input {
  display: none;
}

.c2 {
  position: relative;
}

.c2 .c5 {
  display: block;
  position: relative;
  bottom: 4px;
  padding-left: 16px;
}

.c2 .c7 {
  display: block;
  bottom: 4px;
  font-size: 16px;
}

@media screen and (min-width:1024px) {
  .c6 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c17 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c12 span {
    font-size: 18px;
    line-height: 1.5;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c3 c4"
      display="flex"
    >
      <label
        class="c5 c6"
        for="consistent"
        id="consistent-label"
      >
        Just Boolin
      </label>
      <span
        class="c7 "
        data-reach-tooltip-trigger=""
      >
        <svg
          class="c8 c9"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M22,12 C22,6.47714622 17.5223159,2 12,2 C6.47523326,2 2,6.47577095 2,12 C2,17.524229 6.47523326,22 12,22 C17.5223159,22 22,17.5228538 22,12 Z M24,12 C24,18.6274771 18.6268316,24 12,24 C5.37060996,24 0,18.6287448 0,12 C0,5.37125524 5.37060996,0 12,0 C18.6268316,0 24,5.37252293 24,12 Z M11.057,15.6442233 L11.057,12.5 L9.27493729,12.5 C8.72265254,12.5 8.27493729,12.0522847 8.27493729,11.5 C8.27493729,10.9477153 8.72265254,10.5 9.27493729,10.5 L12.057,10.5 C12.6092847,10.5 13.057,10.9477153 13.057,11.5 L13.057,15.6442233 L15.0505322,15.6442233 C15.602817,15.6442233 16.0505322,16.0919386 16.0505322,16.6442233 C16.0505322,17.1965081 15.602817,17.6442233 15.0505322,17.6442233 L9,17.6442233 C8.44771525,17.6442233 8,17.1965081 8,16.6442233 C8,16.0919386 8.44771525,15.6442233 9,15.6442233 L11.057,15.6442233 Z M11.5,9 C10.6715729,9 10,8.32842712 10,7.5 C10,6.67157288 10.6715729,6 11.5,6 C12.3284271,6 13,6.67157288 13,7.5 C13,8.32842712 12.3284271,9 11.5,9 Z"
          />
        </svg>
      </span>
      <span
        id="consistent-tip"
        role="tooltip"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      >
        upload something
      </span>
    </div>
    <div
      aria-labelledby="consistent-label"
      class="c10 notEmpty"
    >
      <input
        accept=".txt"
        name="bears"
        type="file"
      />
      <div
        class="c11"
      >
        <div
          aria-disabled="false"
          aria-label="boolest.txt, Loading"
          class="c12"
          tabindex="0"
        >
          <span>
            boolest.txt
          </span>
          <svg
            class="c13 c14 c15"
            fill="currentcolor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12,0 C5.372583,0 0,5.372583 0,12 C0,18.627417 5.372583,24 12,24 C18.627417,24 24,18.627417 24,12 C24,11.4477153 23.5522847,11 23,11 C22.4477153,11 22,11.4477153 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 C12.5522847,2 13,1.55228475 13,1 C13,0.44771525 12.5522847,0 12,0 Z"
              transform="rotate(-177 12 12)"
            />
          </svg>
        </div>
      </div>
      <button
        aria-describedby="consistent-tip"
        class="c16 c17"
        id="consistent"
        type="button"
      >
        <svg
          class="c18"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3,9 L3,2 C3,1.44771525 3.44771525,1 4,1 L8.86956522,1 C9.13300396,1 9.38580138,1.10395302 9.57303415,1.28927399 L10.6720803,2.37709802 L20,2.37709802 C20.5522847,2.37709802 21,2.82481327 21,3.37709802 L21,9 L22,9 C22.6077887,9 23.0750324,9.5377097 22.9902149,10.1395511 L21.2857687,22.2338171 C21.2162209,22.7273084 20.7939217,23.094266 20.2955538,23.094266 L3.92354726,23.094266 C3.43189906,23.094266 3.01318427,22.7368835 2.9359601,22.251338 L1.01241285,10.157072 C0.915823617,9.5497691 1.38506399,9 2,9 L3,9 Z M4,11 L3.17161508,11 L4.7770699,21.094266 L19.4266021,21.094266 L20.8491881,11 L20,11 L4,11 Z M19,9 L19,4.37709802 L10.2608696,4.37709802 C9.99743082,4.37709802 9.7446334,4.27314501 9.55740063,4.08782403 L8.45835446,3 L5,3 L5,9 L19,9 Z"
          />
        </svg>
        Select Files...
      </button>
    </div>
  </div>
</div>
`;

exports[`component: FileInputField should render file input field 1`] = `
.c0 + .c0 {
  margin-top: 16px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c6 {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c13 {
  font-size: 40px;
  vertical-align: middle;
}

.c16 {
  font-size: 16px;
  vertical-align: middle;
}

.c8 {
  vertical-align: middle;
}

.c9 {
  outline: none;
  color: hsl(200,10%,20%);
}

.c9:hover {
  color: hsl(200,96%,35%);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 .c5 {
  display: block;
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 8px;
}

.c1 .c7 {
  position: relative;
  font-size: 16px;
  padding-right: 8px;
}

.c1 .sc-gVFdEO {
  margin-top: 4px;
}

.c15 {
  font-size: 18px;
  line-height: 1.5;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,35%);
}

.c15:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c15:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 1px solid hsl(200,96%,35%);
  border-radius: 8px;
}

.c15::-moz-focus-inner {
  border: 0;
}

.c15 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

.c11 {
  width: 300px;
  height: 100px;
}

.c11 .c12 {
  position: absolute;
  top: 30%;
  left: 15%;
  color: hsl(200,96%,35%);
}

.c11 span {
  position: absolute;
  top: 20%;
  left: 37%;
  color: hsl(200,18%,45%);
}

.c10 {
  box-sizing: border-box;
  border-radius: 4px;
  border: 2px dotted;
  border-color: hsl(200,10%,20%);
  min-width: 300px;
  min-height: 100px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10.empty .c14 {
  position: absolute;
  left: 35%;
  bottom: 15%;
}

.c10.notEmpty {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-color: hsl(200,96%,35%);
  padding: 0 8px;
}

.c10.notEmpty .c14 {
  position: relative;
  margin: 16px 0 16px 0;
}

.c10 input {
  display: none;
}

.c2 {
  position: relative;
}

.c2 .c5 {
  display: block;
  position: relative;
  bottom: 4px;
  padding-left: 16px;
}

.c2 .c7 {
  display: block;
  bottom: 4px;
  font-size: 16px;
}

@media screen and (min-width:1024px) {
  .c6 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c15 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c3 c4"
      display="flex"
    >
      <label
        class="c5 c6"
        for="consistent"
        id="consistent-label"
      >
        Just Boolin
      </label>
      <span
        class="c7 "
        data-reach-tooltip-trigger=""
      >
        <svg
          class="c8 c9"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M22,12 C22,6.47714622 17.5223159,2 12,2 C6.47523326,2 2,6.47577095 2,12 C2,17.524229 6.47523326,22 12,22 C17.5223159,22 22,17.5228538 22,12 Z M24,12 C24,18.6274771 18.6268316,24 12,24 C5.37060996,24 0,18.6287448 0,12 C0,5.37125524 5.37060996,0 12,0 C18.6268316,0 24,5.37252293 24,12 Z M11.057,15.6442233 L11.057,12.5 L9.27493729,12.5 C8.72265254,12.5 8.27493729,12.0522847 8.27493729,11.5 C8.27493729,10.9477153 8.72265254,10.5 9.27493729,10.5 L12.057,10.5 C12.6092847,10.5 13.057,10.9477153 13.057,11.5 L13.057,15.6442233 L15.0505322,15.6442233 C15.602817,15.6442233 16.0505322,16.0919386 16.0505322,16.6442233 C16.0505322,17.1965081 15.602817,17.6442233 15.0505322,17.6442233 L9,17.6442233 C8.44771525,17.6442233 8,17.1965081 8,16.6442233 C8,16.0919386 8.44771525,15.6442233 9,15.6442233 L11.057,15.6442233 Z M11.5,9 C10.6715729,9 10,8.32842712 10,7.5 C10,6.67157288 10.6715729,6 11.5,6 C12.3284271,6 13,6.67157288 13,7.5 C13,8.32842712 12.3284271,9 11.5,9 Z"
          />
        </svg>
      </span>
      <span
        id="consistent-tip"
        role="tooltip"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      >
        upload something
      </span>
    </div>
    <div
      aria-labelledby="consistent-label"
      class="c10 empty"
    >
      <input
        accept=".txt"
        name="bears"
        type="file"
      />
      <div
        class="c11"
      >
        <svg
          class="c12 c13"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M13,4.41421356 L13,17.108 C13,17.6602847 12.5522847,18.108 12,18.108 C11.4477153,18.108 11,17.6602847 11,17.108 L11,4.41421356 L7.70710678,7.70710678 C7.31658249,8.09763107 6.68341751,8.09763107 6.29289322,7.70710678 C5.90236893,7.31658249 5.90236893,6.68341751 6.29289322,6.29289322 L11.2928932,1.29289322 C11.6834175,0.902368927 12.3165825,0.902368927 12.7071068,1.29289322 L17.7071068,6.29289322 C18.0976311,6.68341751 18.0976311,7.31658249 17.7071068,7.70710678 C17.3165825,8.09763107 16.6834175,8.09763107 16.2928932,7.70710678 L13,4.41421356 Z M21,17 C21,16.4477153 21.4477153,16 22,16 C22.5522847,16 23,16.4477153 23,17 L23,19.0002091 C23,21.1800298 21.4176187,23 19.3918182,23 L4.60818182,23 C2.58172509,23 1,21.1803466 1,19.0002091 L1,17 C1,16.4477153 1.44771525,16 2,16 C2.55228475,16 3,16.4477153 3,17 L3,19.0002091 C3,20.1332156 3.75344824,21 4.60818182,21 L19.3918182,21 C20.2460177,21 21,20.13281 21,19.0002091 L21,17 Z"
          />
        </svg>
        <span>
          Drag files here or
        </span>
      </div>
      <button
        aria-describedby="consistent-tip"
        class="c14 c15"
        id="consistent"
        type="button"
      >
        <svg
          class="c16"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M3,9 L3,2 C3,1.44771525 3.44771525,1 4,1 L8.86956522,1 C9.13300396,1 9.38580138,1.10395302 9.57303415,1.28927399 L10.6720803,2.37709802 L20,2.37709802 C20.5522847,2.37709802 21,2.82481327 21,3.37709802 L21,9 L22,9 C22.6077887,9 23.0750324,9.5377097 22.9902149,10.1395511 L21.2857687,22.2338171 C21.2162209,22.7273084 20.7939217,23.094266 20.2955538,23.094266 L3.92354726,23.094266 C3.43189906,23.094266 3.01318427,22.7368835 2.9359601,22.251338 L1.01241285,10.157072 C0.915823617,9.5497691 1.38506399,9 2,9 L3,9 Z M4,11 L3.17161508,11 L4.7770699,21.094266 L19.4266021,21.094266 L20.8491881,11 L20,11 L4,11 Z M19,9 L19,4.37709802 L10.2608696,4.37709802 C9.99743082,4.37709802 9.7446334,4.27314501 9.55740063,4.08782403 L8.45835446,3 L5,3 L5,9 L19,9 Z"
          />
        </svg>
        Select Files...
      </button>
    </div>
  </div>
</div>
`;
